--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-email/components": "^0.0.31",
     "@react-email/tailwind": "^1.0.4",
+    "@tailwindcss/postcss": "^4.0.9",
     "@types/node": "22.10.2",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
@@ -35,11 +36,11 @@
   },
   "devDependencies": {
     "@types/react-vertical-timeline-component": "^3.3.6",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "8.23.0",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "@typescript-eslint/eslint-plugin": "^8.23.0",
-    "@typescript-eslint/parser": "8.23.0",
     "prettier": "^3.4.2"
   }
 }
