--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "typescript": "5.7.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.9",
     "@types/react-vertical-timeline-component": "^3.3.6",
-    "eslint": "^9.20.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-unused-imports": "^4.1.4",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "8.23.0",
+    "eslint": "^9.20.1",
+    "eslint-config-next": "^15.1.7",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "prettier": "^3.4.2"
   }
 }
