--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,35 +12,34 @@
   "dependencies": {
     "@react-email/components": "^0.0.33",
     "@react-email/tailwind": "^1.0.4",
-    "@types/node": "22.13.8",
+    "@tailwindcss/postcss": "^4.0.9",
+    "@types/node": "^22.13.9",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.1.0",
-    "autoprefixer": "10.4.20",
+    "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.7",
-    "next": "15.1.6",
+    "framer-motion": "^12.4.10",
+    "next": "15.2.1",
     "next-themes": "^0.4.4",
     "postcss": "8.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
     "react-type-animation": "^3.2.0",
     "resend": "^4.1.2",
-    "tailwindcss": "3.4.17",
-    "typescript": "5.7.3"
+    "tailwindcss": "^4.0.9",
+    "typescript": "5.8.2"
   },
   "devDependencies": {
-    "@types/react-vertical-timeline-component": "^3.3.6",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "8.23.0",
-    "eslint": "^9.20.1",
-    "eslint-config-next": "^15.1.7",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "8.26.0",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "^15.2.1",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "prettier": "^3.4.2"
+    "prettier": "^3.5.3"
   }
 }
