--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^12.12.2",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "postcss": "8.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
