--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "typescript": "5.8.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
-    "@typescript-eslint/parser": "8.33.1",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-unused-imports": "^4.1.4",
     "prettier": "^3.6.2"
+  },
+  "engines": {
+    "node": "24.x"
   }
 }
