--- a/package.json
+++ b/package.json
@@ -11,39 +11,39 @@
   },
   "dependencies": {
     "@react-email/components": "^0.5.0",
-    "@react-email/tailwind": "^1.0.5",
+    "@react-email/tailwind": "^1.2.2",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24.2.1",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.3",
-    "next": "^15.4.5",
+    "framer-motion": "^12.23.12",
+    "next": "^15.4.6",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "postcss": "8.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-type-animation": "^3.2.0",
-    "resend": "^4.7.0",
-    "tailwindcss": "^4.1.10",
-    "typescript": "5.8.3"
+    "resend": "^6.0.1",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.39.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^9.32.0",
-    "eslint-config-next": "^15.4.5",
+    "@typescript-eslint/parser": "^8.39.0",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "^15.4.6",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-unused-imports": "^4.1.4",
     "prettier": "^3.6.2"
   },
   "engines": {
-    "node": "22.x"
+    "node": "24.x"
   }
 }
