--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "jsxSingleQuote": true,
   "bracketSpacing": true,
   "bracketSameLine": true,
-  "printWidth": 100
+  "printWidth": 100,
+  "endOfLine": "lf"
 }
