--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "eslint --fix ."
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix src",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@react-email/components": "^0.5.0",
@@ -34,12 +35,14 @@
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "eslint": "^9.33.0",
     "eslint-config-next": "^15.4.6",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "husky": "^9.1.7",
     "prettier": "^3.6.2"
   },
   "engines": {
